Fix image stretching with object-fit: cover

--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ body {
   background-position: center center;
   padding: 20px 100px;
 /*  min-width: 800px; */
-  
+
   transform: rotateZ(-5deg);
   box-shadow: 1px 15px 20px 0px rgba(0,0,0,0.5);
-  
+
   position: absolute;
 }
 
@@ -43,8 +43,9 @@ body {
 }
 
 img {
-  max-height: 200px;
+  height: 200px;
   width: 100%;
+  object-fit: cover;
   user-select: none;
 }
 
@@ -68,6 +69,6 @@ p {
   color: rgb(0,0,100);
   opacity: 0.75;
   user-select: none;
-  
+
   // filter: drop-shadow(2px 1.5px 1px rgba(0,0,105,0.9));
 }
